js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating/dep-1_FIXTURE.js
import
defer
*
as
dep2
from
"
.
/
dep
-
2_FIXTURE
.
js
"
;
globalThis
.
dep3evaluated
=
false
;
try
{
dep2
.
foo
;
}
catch
(
error
)
{
globalThis
[
"
evaluating
dep2
.
foo
error
"
]
=
error
;
}
globalThis
[
"
evaluating
dep2
.
foo
evaluates
dep3
"
]
=
globalThis
.
dep3evaluated
;
